# pylib

./: pandas.ipynb  pyproject.toml
dataset/: contact.csv
