[tool.poetry]
name = "pylib"
version = "0.1.0"
description = ""
authors = ["meisamasgri <meisamasgri@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
